--- a/fastapi-react/EquipoBellaKat/package.json
+++ b/fastapi-react/EquipoBellaKat/package.json
@@ -13,11 +13,14 @@
     "@chakra-ui/react": "^3.28.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@types/leaflet": "^1.9.21",
     "emotion-theming": "^11.0.0",
     "framer-motion": "^12.23.24",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
